--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     </head>
 
     <body>
+        <div class="buttons">
+            <button id="rock">rock</button>
+            <button id="paper">paper</button>
+            <button id="scissors">scissors</button>
+        </div>
 <script src="rock_paper_scissors.js"></script>
 <!--console.log("hello world")-->
 
